@@ -1,5 +1,7 @@
 == master
 
+* Remove the PluginAWeek namespace
+
 == 0.1.4 / 2008-10-26
 
 * Add compatibility with has_messages 0.2.0
